Prueba al agregar pructos en distintas categorias

--- a/src/main/webapp/css/headerCSS.css
+++ b/src/main/webapp/css/headerCSS.css
@@ -14,52 +14,41 @@
     z-index: 3;
     position: fixed;
     top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
 }
 
 .logoMenu {
-    position: absolute;
-    margin: 5px 50px;
-}
-
-.logoMenu img {
-    display: block;
-    width: 100%;
     height: 70px;
 }
 
+.logoMenu img {
+    height: 100%;
+}
+
 .carrito {
-    display: block;
-    float: right;
-    margin-right: 50px;
     color: black;
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
 }
 
-#carritologo {
-    font-size: 30px;
-    line-height: 80px;
-}
-
-#cuenta-carrito {
-    font-size: 15px;
-    background-color: #85C1E9;
-    border-radius: 100%;
-    display: inline-block;
-    margin: auto;
-    width: 20px;
-    height: 20px;
-    aspect-ratio: 1;
-    text-align: center;
-    line-height: 20px;
+.carrito i {
+    font-size: 24px;
+    margin-right: 5px;
 }
 
 .navegador {
-    line-height: 80px;
+    display: flex;
+    align-items: center;
 }
 
 .menu {
     display: flex;
-    float: right;
-    position: relative;
+    align-items: center;
+    list-style: none;
 }
 
 .menu a {
@@ -68,10 +57,11 @@
     padding: 0 10px;
     text-align: center;
     text-decoration: none;
+    line-height: 80px;
 }
 
-.fa-solid {
-    right: 20px;
+.menu li {
+    position: relative;
 }
 
 .menu .submenu {
@@ -79,76 +69,25 @@
     box-shadow: 3px 10px 10px rgba(0, 0, 0, 0.2);
     display: none;
     position: absolute;
-    top: 80px; /* Ajustar según la altura de tu menú */
-    border-radius: 5px;
+    top: 80px;
     left: 0;
     z-index: 1000;
-    min-width: 200px; /* Ancho mínimo para los submenús */
+    min-width: 200px;
+    border-radius: 5px;
 }
 
-.menu li {
-    position: relative;
-}
-
-.menu li:hover > .submenu {
+.submenuParent:hover > .submenu {
     display: block;
-}
-
-.submenu li {
-    position: relative;
 }
 
 .submenu .submenu {
     top: 0;
     left: 100%;
     margin-left: 1px;
-    min-width: 200px; /* Ancho mínimo para los sub-submenús */
-}
-
-.login {
-    float: right;
-    padding: 0px 20px;
-    line-height: 80px;
-}
-
-.login button {
-    font-size: 16px;
-    height: 20px;
-    width: 110px;
-    cursor: pointer;
-    border: 0;
-}
-
-.usuario {
-    text-align: center;
-    float: right;
-    line-height: 80px;
-    width: 150px;
-}
-
-.usuario a {
-    color: gray;
-    font-weight: 600;
-}
-
-.usuario .menuUsuario {
-    background-color: #fff;
-    box-shadow: 3px 10px 10px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    display: none;
-}
-
-.usuario:hover .menuUsuario {
-    display: block;
+    min-width: 200px;
 }
 
 .menu a:hover {
-    background: #5499C7;
-    color: #fff;
-    border-radius: 5px;
-}
-
-.menu button:hover {
     background: #5499C7;
     color: #fff;
     border-radius: 5px;
@@ -163,8 +102,10 @@
 }
 
 @media (max-width: 965px) {
-    .logoMenu {
-        margin-left: 30px;
+    .checkbtn {
+        display: block;
+        font-size: 30px;
+        cursor: pointer;
     }
 
     .menu {
@@ -173,71 +114,57 @@
         height: auto;
         background-color: #fff;
         top: 80px;
-        display: block;
-        left: 100%;
+        left: -100%;
         transition: all 0.5s;
-        line-height: 63px;
+        flex-direction: column;
     }
 
     .menu a {
         width: 100%;
-        font-size: 18px;
-        padding: 0px;
+        text-align: left;
+        padding: 15px 20px;
     }
 
-    .menu i {
-        right: 20px;
-        position: absolute;
-        font-size: 20px;
-        line-height: 63px;
-    }
-
-    .menu .buttom {
-        width: 150px;
-    }
-
-    .auth {
-        padding-right: 20px;
-        text-align: center;
-        margin: auto;
-    }
-
-    .checkbtn {
-        display: block;
-        float: right;
-        line-height: 80px;
-        font-size: 40px;
-        margin-right: 30px;
-        cursor: pointer;
-    }
-
-    .carrito {
-        float: right;
-        margin-right: 30px;
-    }
-
-    #check:checked ~ nav .menu {
+    #check:checked ~ .navegador .menu {
         left: 0;
     }
 
-    .menu li:hover .submenu {
+    .menu .submenu {
+        position: relative;
+        box-shadow: none;
+    }
+
+    .submenuParent:hover > .submenu {
         display: none;
+    }
+
+    .submenuParent > input[type="checkbox"] {
+        display: none;
+    }
+
+    .submenuParent > input[type="checkbox"]:checked + .submenu {
+        display: block;
+    }
+
+    .submenuParent > label {
+        display: block;
+        padding: 15px 20px;
+        cursor: pointer;
+    }
+
+    .submenuParent > label:after {
+        content: " \f078";
+        font-family: FontAwesome;
+        float: right;
     }
 }
 
 @media (max-width: 520px) {
-    .login {
-        display: flex;
-        flex-direction: column;
-        line-height: 0;
-        height: 80px;
-        justify-content: center;
-        gap: 10px;
+    .logoMenu {
+        margin-left: 10px;
     }
 
-    .login button {
-        font-size: 16px;
-        width: 100px;
+    .carrito {
+        margin-right: 10px;
     }
 }
-
